@@ -1,3 +1,12 @@
+2010-02-18  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
+
+        PR target/40887
+	Backport from trunk.
+        2009-12-24  Julian Brown  <julian@codesourcery.com>
+                    Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
+
+	* gcc.target/arm/pr40887.c: New test.
+
 2010-02-16  Ira Rosen <irar@il.ibm.com>
 
 	PR tree-optimization/43074
